2006-03-15 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Partition.h,
	  src/Dialog_Partition_Info.cc,
	  src/GParted_Core.cc,
	  src/Partition.cc,
	  src/TreeView_Detail.cc,
	  src/Win_GParted.cc: Made Partition::mountpoints private
	  
2006-03-14 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* changed the way devices and partitions store their devicepaths.
	  Instead of holding a 'realpath' and a symbolic path we store paths
	  in a list. This allows for improved detection of mountpoins, free
	  space, etc..

	  Also fixed a nasty bug which showed up when you copy a partition
	  from one device to another. (thanks to mario for the report)

2006-03-09 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Makefile.am,
	  src/Makefile.am: sorted filelistings.
	  
2006-03-09 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/Win_GParted.cc: only allow 'swapon' on real partitions
	
2006-03-09 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Win_GParted.h,
	  src/Win_GParted.cc: added basic support for mounting unmounted
	  partitions on mountpoints found in /etc/fstab

2006-03-09 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* src/DrawingAreaVisualDisk.cc: changed MIN_SIZE from static 20 to
	  BORDER * 2 + 2 
	 
2006-03-09 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/DrawingAreaVisualDisk.h,
	  include/Makefile.am,
	  include/Win_GParted.h
	  src/DrawingAreaVisualDisk.cc,
	  src/Makefile.am
	  src/Win_GParted.cc: removed the frame from the visualdiskwidget and
	  changed some visual details. Also changed visual representation of
	  selected partition. The latter might be considered as a work in
	  progress.
	* include/FrameVisualDisk.h,
	  src/FrameVisualDisk.cc: Removed.
	  
2006-03-07 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* src/Dialog_Partition_Copy.cc,
	  src/Dialog_Partition_Resize_Move.cc: cleanups

2006-03-07 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* include/GParted_Core.h,
	  include/TreeView_Detail.h,
	  src/GParted_Core.cc,