@@ -1,5 +1,10 @@
 2006-03-15 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* src/Dialog_Partition_Info.cc,
+	  src/DrawingAreaVisualDisk.cc: cleanups
+
+2006-03-15 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* include/Partition.h,
 	  src/Dialog_Partition_Info.cc,
 	  src/GParted_Core.cc,
